--- a/login/src/app/app.component.html
+++ b/login/src/app/app.component.html
@@ -2,15 +2,15 @@
 <div>
     <div style="text-align:center" class="jumbotron">
       <h1>
-        Welcome to {{ title }}!
+          <p style="font-size:60px;">Welcome to {{ title }}!</p>
       </h1>
     </div>
 
 
-    <div class="col-md-4 col-md-offset-4" >
-        <div class="panel panel-primary">
-            <div class="panel-heading">
-                <h2>Please login or sign up</h2>
+    <div class="container" >
+
+            <div class="text-center">
+                <h2>Please Login or Create Account</h2>
             </div>
 
             <div class="panel-body">
@@ -21,7 +21,7 @@
                     		<div class="input-group-prepend">
                     		    <span class="input-group-text"> <i class="fa fa-user"></i> </span>
                     		 </div>
-                            <input class="form-control" placeholder="UserName" type="text">
+                            <input class="form-control" placeholder="UserName" type="text" height="48">
                         </div>
 
                         <div class="form-group input-group">
@@ -41,10 +41,84 @@
 
             </div>   <!-- the panel body -->
 
-        </div>
-    </div>              <!-- panel login or sign up -->
+
+    </div>              <!-- container login or sign up -->
 
 </div>  <!-- the whole thing -->
+
+
+
+
+<div class="container">
+<br>  <p class="text-center">More bootstrap 4 components on <a href="http://bootstrap-ecommerce.com/"> Bootstrap-ecommerce.com</a></p>
+<hr>
+    <div class="card bg-light">
+    <article class="card-body mx-auto" style="max-width: 400px;">
+    	<h4 class="card-title mt-3 text-center">Create Account</h4>
+    	<p class="text-center">Get started with your free account</p>
+    	<p>
+    		<a href="" class="btn btn-block btn-twitter"> <i class="fab fa-twitter"></i>   Login via Twitter</a>
+    		<a href="" class="btn btn-block btn-facebook"> <i class="fab fa-facebook-f"></i>   Login via facebook</a>
+    	</p>
+    	<p class="divider-text">
+            <span class="bg-light">OR</span>
+        </p>
+    	<form>
+    	<div class="form-group input-group">
+    		<div class="input-group-prepend">
+    		    <span class="input-group-text"> <i class="fa fa-user"></i> </span>
+    		 </div>
+            <input name="" class="form-control" placeholder="Full name" type="text">
+        </div> <!-- form-group// -->
+        <div class="form-group input-group">
+        	<div class="input-group-prepend">
+    		    <span class="input-group-text"> <i class="fa fa-envelope"></i> </span>
+    		 </div>
+            <input name="" class="form-control" placeholder="Email address" type="email">
+        </div> <!-- form-group// -->
+        <div class="form-group input-group">
+        	<div class="input-group-prepend">
+    		    <span class="input-group-text"> <i class="fa fa-phone"></i> </span>
+    		</div>
+    		<select class="custom-select" style="max-width: 120px;">
+    		    <option selected="">+971</option>
+    		    <option value="1">+972</option>
+    		    <option value="2">+198</option>
+    		    <option value="3">+701</option>
+    		</select>
+        	<input name="" class="form-control" placeholder="Phone number" type="text">
+        </div> <!-- form-group// -->
+        <div class="form-group input-group">
+        	<div class="input-group-prepend">
+    		    <span class="input-group-text"> <i class="fa fa-building"></i> </span>
+    		</div>
+    		<select class="form-control">
+    			<option selected=""> Select job type</option>
+    			<option>Designer</option>
+    			<option>Manager</option>
+    			<option>Accaunting</option>
+    		</select>
+    	</div> <!-- form-group end.// -->
+        <div class="form-group input-group">
+        	<div class="input-group-prepend">
+    		    <span class="input-group-text"> <i class="fa fa-lock"></i> </span>
+    		</div>
+            <input class="form-control" placeholder="Create password" type="password">
+        </div> <!-- form-group// -->
+        <div class="form-group input-group">
+        	<div class="input-group-prepend">
+    		    <span class="input-group-text"> <i class="fa fa-lock"></i> </span>
+    		</div>
+            <input class="form-control" placeholder="Repeat password" type="password">
+        </div> <!-- form-group// -->
+        <div class="form-group">
+            <button type="submit" class="btn btn-primary btn-block"> Create Account  </button>
+        </div> <!-- form-group// -->
+        <p class="text-center">Have an account? <a href="">Log In</a> </p>
+    </form>
+    </article>
+    </div>
+</div>
 
 
 
