--- a/login/src/app/app.component.html
+++ b/login/src/app/app.component.html
@@ -6,125 +6,46 @@
       </h1>
     </div>
 
-
-    <div class="container" >
-
-            <div class="text-center">
-                <h2>Please Login or Create Account</h2>
-            </div>
-
-            <div class="panel-body">
-
-                <article class="card-body mx-auto" style="max-width: 400px;">
-                    <form>
-                    	<div class="form-group input-group">
-                    		<div class="input-group-prepend">
-                    		    <span class="input-group-text"> <i class="fa fa-user"></i> </span>
-                    		 </div>
-                            <input class="form-control" placeholder="UserName" type="text" height="48">
-                        </div>
-
-                        <div class="form-group input-group">
-                        	<div class="input-group-prepend">
-                    		    <span class="input-group-text"> <i class="fa fa-envelope"></i> </span>
-                    		 </div>
-                            <input class="form-control" placeholder="PassWord" type="email">
-                        </div>
-                    </form>
-
-                    <div>
-                        <button type="submit" class="btn btn-primary btn-block"> Log In  </button>
-                        <button type="submit" class="btn btn-primary btn-block"> Create Account  </button>
-                    </div>
-
-                </article>
-
-            </div>   <!-- the panel body -->
-
-
-    </div>              <!-- container login or sign up -->
-
 </div>  <!-- the whole thing -->
 
 
-
-
 <div class="container">
-<br>  <p class="text-center">More bootstrap 4 components on <a href="http://bootstrap-ecommerce.com/"> Bootstrap-ecommerce.com</a></p>
-<hr>
     <div class="card bg-light">
-    <article class="card-body mx-auto" style="max-width: 400px;">
-    	<h4 class="card-title mt-3 text-center">Create Account</h4>
-    	<p class="text-center">Get started with your free account</p>
-    	<p>
-    		<a href="" class="btn btn-block btn-twitter"> <i class="fab fa-twitter"></i>   Login via Twitter</a>
-    		<a href="" class="btn btn-block btn-facebook"> <i class="fab fa-facebook-f"></i>   Login via facebook</a>
-    	</p>
-    	<p class="divider-text">
-            <span class="bg-light">OR</span>
-        </p>
-    	<form>
-    	<div class="form-group input-group">
-    		<div class="input-group-prepend">
-    		    <span class="input-group-text"> <i class="fa fa-user"></i> </span>
-    		 </div>
-            <input name="" class="form-control" placeholder="Full name" type="text">
-        </div> <!-- form-group// -->
-        <div class="form-group input-group">
-        	<div class="input-group-prepend">
-    		    <span class="input-group-text"> <i class="fa fa-envelope"></i> </span>
-    		 </div>
-            <input name="" class="form-control" placeholder="Email address" type="email">
-        </div> <!-- form-group// -->
-        <div class="form-group input-group">
-        	<div class="input-group-prepend">
-    		    <span class="input-group-text"> <i class="fa fa-phone"></i> </span>
-    		</div>
-    		<select class="custom-select" style="max-width: 120px;">
-    		    <option selected="">+971</option>
-    		    <option value="1">+972</option>
-    		    <option value="2">+198</option>
-    		    <option value="3">+701</option>
-    		</select>
-        	<input name="" class="form-control" placeholder="Phone number" type="text">
-        </div> <!-- form-group// -->
-        <div class="form-group input-group">
-        	<div class="input-group-prepend">
-    		    <span class="input-group-text"> <i class="fa fa-building"></i> </span>
-    		</div>
-    		<select class="form-control">
-    			<option selected=""> Select job type</option>
-    			<option>Designer</option>
-    			<option>Manager</option>
-    			<option>Accaunting</option>
-    		</select>
-    	</div> <!-- form-group end.// -->
-        <div class="form-group input-group">
-        	<div class="input-group-prepend">
-    		    <span class="input-group-text"> <i class="fa fa-lock"></i> </span>
-    		</div>
-            <input class="form-control" placeholder="Create password" type="password">
-        </div> <!-- form-group// -->
-        <div class="form-group input-group">
-        	<div class="input-group-prepend">
-    		    <span class="input-group-text"> <i class="fa fa-lock"></i> </span>
-    		</div>
-            <input class="form-control" placeholder="Repeat password" type="password">
-        </div> <!-- form-group// -->
-        <div class="form-group">
-            <button type="submit" class="btn btn-primary btn-block"> Create Account  </button>
-        </div> <!-- form-group// -->
-        <p class="text-center">Have an account? <a href="">Log In</a> </p>
-    </form>
-    </article>
+        <br>
+        <div class="text-center">
+            <h2 style="font-size:30px;">Please Login or Create Account</h2>
+        </div>
+
+        <article class="card-body mx-auto" style="max-width: 400px;">
+        	<form>
+            	<div class="form-group input-group">
+            		<div class="input-group-prepend">
+            		    <span class="input-group-text"></span>
+            		 </div>
+                    <input name="" class="form-control" placeholder="UserName" type="text">
+                </div> <!-- form-group// -->
+
+                <div class="form-group input-group">
+                	<div class="input-group-prepend">
+            		    <span class="input-group-text"></span>
+            		</div>
+                    <input class="form-control" placeholder="Password" type="password">
+                </div> <!-- form-group// -->
+
+                <div class="form-group">
+                    <button type="submit" class="btn btn-primary btn-block"> Log In  </button>
+                    <button type="submit" class="btn btn-primary btn-block"> Create Account  </button>
+                </div> <!-- form-group// -->
+                
+            </form>
+        </article>
     </div>
-</div>
+</div>  <!-- container -->
 
-
-
-
-<div>
-    <app-test1></app-test1>
-</div>
+<article class="bg-secondary mb-3">
+    <div class="card-body text-center">
+        <h3 class="text-white mt-3">All Rights Reserved</h3>
+    </div>
+</article>
 
 <router-outlet></router-outlet>
