--- a/login/src/app/create/create.component.html
+++ b/login/src/app/create/create.component.html
@@ -1,3 +1,27 @@
 <p>
-  create works create works create works create works create works! 
+  create works create works create works create works create works!
 </p>
+
+
+<div class="container">
+    <div class="card bg-light">
+        <br>
+        <div class="text-center">
+            <h2 style="font-size:30px;">Please Create Account</h2>
+        </div>
+
+        <article class="card-body mx-auto" style="max-width: 400px;">
+        	<form>
+                <div class="form-group">
+                    <button type="submit" class="btn btn-primary btn-block"> Log In  </button>
+                    <button type="submit" class="btn btn-primary btn-block"> Log In  </button>
+                    <button type="submit" class="btn btn-primary btn-block"> Log In  </button>
+                    <button type="submit" class="btn btn-primary btn-block"> Log In  </button>
+                    <button type="submit" class="btn btn-primary btn-block"> Log In  </button>
+                    <button type="submit" class="btn btn-primary btn-block">Create Account</button>
+                </div> <!-- form-group// -->
+
+            </form>
+        </article>
+    </div>
+</div>
