--- a/login/src/app/app.component.html
+++ b/login/src/app/app.component.html
@@ -9,8 +9,11 @@
 </div>  <!--  -->
 
 <app-menu></app-menu>
-<br>
+<router-outlet></router-outlet>
+<!-- <app-create></app-create> -->
+<!-- <router-outlet></router-outlet> -->
 
+<br>
 <!-- <app-create></app-create> -->
 
 <article class="bg-secondary mb-3">
@@ -18,5 +21,3 @@
         <h3 class="text-white mt-3">All Rights Reserved</h3>
     </div>
 </article>
-
-<router-outlet></router-outlet>
