--- a/login/src/app/app.component.html
+++ b/login/src/app/app.component.html
@@ -8,9 +8,15 @@
 
 </div>  <!--  -->
 
-<app-menu></app-menu>
-<router-outlet></router-outlet>
-<!-- <app-create></app-create> -->
+<div>
+    <app-menu></app-menu>
+</div>
+
+<div>
+    <app-create></app-create>
+</div>
+
+
 <!-- <router-outlet></router-outlet> -->
 
 <br>
@@ -21,3 +27,5 @@
         <h3 class="text-white mt-3">All Rights Reserved</h3>
     </div>
 </article>
+
+<router-outlet></router-outlet>
