--- a/login/src/app/menu/menu.component.html
+++ b/login/src/app/menu/menu.component.html
@@ -25,11 +25,10 @@
 
                     <!-- <a routerLink="/create" routerLinkActive="active">Go create</a><br> -->
 
-                    <button type="submit" class="btn btn-primary btn-block" routerLink="/create"> Log In  </button>
+                    <button type="submit" class="btn btn-primary btn-block"> Log In  </button>
 
-                    <button type="submit" class="btn btn-primary btn-block" (click)="gotoCreate()">Create Account</button>
+                    <button type="submit" class="btn btn-primary btn-block">Create Account</button>
                 </div> <!-- form-group// -->
-
             </form>
         </article>
     </div>
