--- a/login/src/app/menu/menu.component.html
+++ b/login/src/app/menu/menu.component.html
@@ -22,12 +22,9 @@
                 </div> <!-- form-group// -->
 
                 <div class="form-group">
-
                     <!-- <a routerLink="/create" routerLinkActive="active">Go create</a><br> -->
-
-                    <button type="submit" class="btn btn-primary btn-block"> Log In  </button>
-
-                    <button type="submit" class="btn btn-primary btn-block">Create Account</button>
+                    <button type="submit" class="btn btn-primary btn-block">Log In</button>
+                    <button type="submit" class="btn btn-primary btn-block" (click)="showit=!showit">Create Account</button>
                 </div> <!-- form-group// -->
             </form>
         </article>
