--- a/login/src/app/menu/menu.component.html
+++ b/login/src/app/menu/menu.component.html
@@ -23,8 +23,10 @@
 
                 <div class="form-group">
                     <!-- <a routerLink="/create" routerLinkActive="active">Go create</a><br> -->
-                    <button type="submit" class="btn btn-primary btn-block">Log In</button>
-                    <button type="submit" class="btn btn-primary btn-block" (click)="showit=!showit">Create Account</button>
+                    <button type="button" class="btn btn-primary btn-block">Log In</button>
+                    <button type="button" class="btn btn-primary btn-block" (click)="Click()">Create Account</button>
+
+                    <button type="button" (click)="test()">test</button> say {{title_in_app}}
                 </div> <!-- form-group// -->
             </form>
         </article>
