--- a/login/src/app/create/create.component.html
+++ b/login/src/app/create/create.component.html
@@ -1,8 +1,3 @@
-<p>
-  create works create works create works create works create works!
-</p>
-
-
 <div class="container">
     <div class="card bg-light">
         <br>
@@ -13,12 +8,35 @@
         <article class="card-body mx-auto" style="max-width: 400px;">
         	<form>
                 <div class="form-group">
-                    <button type="submit" class="btn btn-primary btn-block"> Log In  </button>
-                    <button type="submit" class="btn btn-primary btn-block"> Log In  </button>
-                    <button type="submit" class="btn btn-primary btn-block"> Log In  </button>
-                    <button type="submit" class="btn btn-primary btn-block"> Log In  </button>
-                    <button type="submit" class="btn btn-primary btn-block"> Log In  </button>
-                    <button type="submit" class="btn btn-primary btn-block">Create Account</button>
+                    <div class="form-group input-group">
+                		<div class="input-group-prepend">
+                		    <span class="input-group-text"></span>
+                		 </div>
+                        <input name="" class="form-control" placeholder="UserName" type="text">
+                    </div> <!-- form-group// -->
+
+                    <div class="form-group input-group">
+                    	<div class="input-group-prepend">
+                		    <span class="input-group-text"></span>
+                		</div>
+                        <input class="form-control" placeholder="Password" type="password">
+                    </div>
+
+                    <div class="form-group input-group">
+                    	<div class="input-group-prepend">
+                		    <span class="input-group-text"></span>
+                		</div>
+                        <input class="form-control" placeholder="Enter Password Again" type="password">
+                    </div>
+
+                    <div class="form-group input-group">
+                    	<div class="input-group-prepend">
+                		    <span class="input-group-text"></span>
+                		</div>
+                        <input class="form-control" placeholder="Email" type="password">
+                    </div>
+
+                    <button type="button" class="btn btn-primary btn-block">Create Account</button>
                 </div> <!-- form-group// -->
 
             </form>
