--- a/login/src/app/create/create.component.html
+++ b/login/src/app/create/create.component.html
@@ -12,14 +12,24 @@
                 		<div class="input-group-prepend">
                 		    <span class="input-group-text"></span>
                 		 </div>
-                        <input name="" class="form-control" placeholder="UserName" type="text">
+                        <input [formControl]="userForm.controls.userName" class="form-control" placeholder="UserName" type="text">
+                        <div *ngIf="userForm.controls.userName.invalid && userForm.controls.userName.touched" class="a">
+                            <div *ngIf="userForm.controls.userName.errors?.required">
+                                <pre class="wrong_message">  Username cannot be empty!</pre>
+                            </div>
+                        </div>
                     </div> <!-- form-group// -->
 
                     <div class="form-group input-group">
                     	<div class="input-group-prepend">
                 		    <span class="input-group-text"></span>
                 		</div>
-                        <input class="form-control" placeholder="Password" type="password">
+                        <input [formControl]="userForm.controls.passwd" class="form-control" placeholder="Password" type="password">
+                        <div *ngIf="userForm.controls.passwd.invalid && userForm.controls.passwd.touched" class="a">
+                            <div *ngIf="userForm.controls.passwd.errors?.required">
+                                <pre class="wrong_message">  Password cannot be empty!</pre>
+                            </div>
+                        </div>
                     </div>
 
                     <div class="form-group input-group">
@@ -33,7 +43,14 @@
                     	<div class="input-group-prepend">
                 		    <span class="input-group-text"></span>
                 		</div>
-                        <input class="form-control" placeholder="Email" type="password">
+                        <input [formControl]="userForm.controls.email" class="form-control" placeholder="Email" type="password">
+                        <div *ngIf="userForm.controls.email.invalid && userForm.controls.email.touched" class="a">
+                        <!-- <div *ngIf="submitted && userForm.controls.email.errors" class="a"> -->
+                            <div *ngIf="userForm.controls.email.errors.required">
+                                <pre class="wrong_message">  Email cannot be empty!</pre>
+                            </div>
+                            <div *ngIf="userForm.controls.email.errors.pattern"> Email must be a valid email address</div>
+                        </div>
                     </div>
 
                     <button type="button" class="btn btn-primary btn-block">Create Account</button>
