--- a/login/src/app/app.component.html
+++ b/login/src/app/app.component.html
@@ -23,6 +23,12 @@
 
 <!-- <router-outlet></router-outlet> -->
 
+<div>
+    <input (keyup)="onKey($event)">
+    <p>{{values}}</p>
+</div>
+
+
 
 <br>
 <app-bottom></app-bottom>
