--- a/login/src/app/create/create.component.html
+++ b/login/src/app/create/create.component.html
@@ -49,7 +49,9 @@
                             <div *ngIf="userForm.controls.email.errors.required">
                                 <pre class="wrong_message">  Email cannot be empty!</pre>
                             </div>
-                            <div *ngIf="userForm.controls.email.errors.pattern"> Email must be a valid email address</div>
+                            <div *ngIf="userForm.controls.email.errors.pattern">
+                                <pre class="wrong_message">   Email must be a valid email address!</pre>
+                            </div>
                         </div>
                     </div>
 
