--- a/login/src/app/create/create.component.html
+++ b/login/src/app/create/create.component.html
@@ -5,6 +5,10 @@
             <h2 style="font-size:30px;">Please Create Account</h2>
         </div>
 
+        <p>user password: {{string_passwd1}}</p>
+        <p>repassword: {{string_passwd2}}</p>
+
+
         <article class="card-body mx-auto" style="max-width: 400px;">
         	<form>
                 <div class="form-group">
@@ -24,7 +28,7 @@
                     	<div class="input-group-prepend">
                 		    <span class="input-group-text"></span>
                 		</div>
-                        <input [formControl]="userForm.controls.passwd" class="form-control" placeholder="Password" type="password">
+                        <input (keyup)="passwd1($event)" [formControl]="userForm.controls.passwd" class="form-control" placeholder="Password" type="password">
                         <div *ngIf="userForm.controls.passwd.invalid && userForm.controls.passwd.touched" class="a">
                             <div *ngIf="userForm.controls.passwd.errors?.required">
                                 <pre class="wrong_message">  Password cannot be empty!</pre>
@@ -36,7 +40,12 @@
                     	<div class="input-group-prepend">
                 		    <span class="input-group-text"></span>
                 		</div>
-                        <input class="form-control" placeholder="Enter Password Again" type="password">
+                        <input (keyup)="passwd2($event)" [formControl]="userForm.controls.rePasswd" class="form-control" class="form-control" placeholder="Enter Password Again" type="password">
+                        <div *ngIf="userForm.controls.rePasswd.invalid && userForm.controls.rePasswd.touched" class="a">
+                            <div *ngIf="userForm.controls.rePasswd.errors?.required">
+                                <pre class="wrong_message">  Password cannot be empty!</pre>
+                            </div>
+                        </div>
                     </div>
 
                     <div class="form-group input-group">
@@ -50,7 +59,7 @@
                                 <pre class="wrong_message">  Email cannot be empty!</pre>
                             </div>
                             <div *ngIf="userForm.controls.email.errors.pattern">
-                                <pre class="wrong_message">   Email must be a valid email address!</pre>
+                                <pre class="wrong_message">   Format wrong!</pre>
                             </div>
                         </div>
                     </div>
