--- a/login/src/app/create/create.component.html
+++ b/login/src/app/create/create.component.html
@@ -12,6 +12,7 @@
         <article class="card-body mx-auto" style="max-width: 400px;">
         	<form>
                 <div class="form-group">
+                    <!-- username -->
                     <div class="form-group input-group">
                 		<div class="input-group-prepend">
                 		    <span class="input-group-text"></span>
@@ -24,6 +25,7 @@
                         </div>
                     </div> <!-- form-group// -->
 
+                    <!-- password -->
                     <div class="form-group input-group">
                     	<div class="input-group-prepend">
                 		    <span class="input-group-text"></span>
@@ -36,6 +38,7 @@
                         </div>
                     </div>
 
+                    <!-- password2 -->
                     <div class="form-group input-group">
                     	<div class="input-group-prepend">
                 		    <span class="input-group-text"></span>
@@ -51,6 +54,7 @@
                         </div>
                     </div>
 
+                    <!-- email -->
                     <div class="form-group input-group">
                     	<div class="input-group-prepend">
                 		    <span class="input-group-text"></span>
@@ -67,7 +71,7 @@
                         </div>
                     </div>
 
-                    <button type="button" class="btn btn-primary btn-block">Create Account</button>
+                    <button type="button" class="btn btn-primary btn-block" (click)="create_account()">Create Account</button>
                 </div> <!-- form-group// -->
 
             </form>
