--- a/login/src/app/menu/menu.component.html
+++ b/login/src/app/menu/menu.component.html
@@ -11,7 +11,7 @@
             		<div class="input-group-prepend">
             		    <span class="input-group-text"></span>
             		 </div>
-                    <input formControlName="userName" class="form-control" placeholder="UserName" type="text">
+                    <input name="123" formControlName="userName" class="form-control" placeholder="UserName" type="text">
                     <div *ngIf="userForm.controls.userName.invalid && userForm.controls.userName.touched" class="a">
                         <div *ngIf="userForm.controls.userName.errors?.required">
                             <pre class="wrong_message">  Username cannot be empty!</pre>
